<resources>
    <string name="app_name">Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">username</string>
    <string name="password">password</string>
    <string name="submit">Register</string>
    <string name="login">Login</string>
    <string name="login_page">Sign in</string>
    <string name="registration_page">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_user">NEW USER? SIGN UP</string>
    <string name="add_to_kart">Add to Cart</string>
    <string name="title">Title</string>
    <string name="product">Product</string>
</resources>